src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-212.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units tape=it\")"
---
items:
  - loc: "#units tape=it"
    locs:
      directive: "#units"
    options:
      - loc: tape=it
        locs:
          method: it
          option: tape
        method: InstrumentToTarget
        option: TapingMethod
    type: UnitsDirective
