src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-213.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units tape=ss\")"
---
items:
  - loc: "#units tape=ss"
    locs:
      directive: "#units"
    options:
      - loc: tape=ss
        locs:
          method: ss
          option: tape
        method: StationToStation
        option: TapingMethod
    type: UnitsDirective
