src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-214.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units tape=is\")"
---
items:
  - loc: "#units tape=is"
    locs:
      directive: "#units"
    options:
      - loc: tape=is
        locs:
          method: is
          option: tape
        method: InstrumentToStation
        option: TapingMethod
    type: UnitsDirective
