src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-216.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units tape=sq\")"
---
INVALID:
  items:
    - INVALID:
        loc: "#units tape=sq"
        locs:
          directive: "#units"
        options:
          - INVALID:
              loc: tape=sq
              locs:
                method: sq
                option: tape
              method: sq
              option: TapingMethod
            issues:
              - 0
        type: UnitsDirective
issues:
  - code: EINVALIDTAPINGMETHOD
    loc: sq
    message: Invalid taping method
    severity: Error
