src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-219.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units uvh=\")"
---
INVALID:
  items:
    - INVALID:
        loc: "#units uvh="
        locs:
          directive: "#units"
        options:
          - INVALID:
              locs:
                option: uvh
              option: HorizontalUnitVariance
            issues:
              - 0
        type: UnitsDirective
issues:
  - code: EMISSINGVALUE
    loc: ""
    message: Missing unit variance
    severity: Error
