src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-221.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units uvh=0.0\")"
---
items:
  - loc: "#units uvh=0.0"
    locs:
      directive: "#units"
    options:
      - loc: uvh=0.0
        locs:
          option: uvh
          variance: "0.0"
        option: HorizontalUnitVariance
        variance: 0
    type: UnitsDirective
